WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167168
Fix CFURLConnection build on Mac
https://bugs.webkit.org/show_bug.cgi?id=167168
Summary
Fix CFURLConnection build on Mac
Alex Christensen
Reported
2017-01-18 12:15:21 PST
Fix CFURLConnection build on Mac
Attachments
Patch
(14.81 KB, patch)
2017-01-18 12:17 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(495.14 KB, application/zip)
2017-01-18 13:09 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews102 for mac-elcapitan
(1.17 MB, application/zip)
2017-01-18 13:11 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-elcapitan
(613.01 KB, application/zip)
2017-01-18 13:16 PST
,
Build Bot
no flags
Details
Patch
(14.85 KB, patch)
2017-01-18 13:30 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-01-18 12:17:59 PST
Created
attachment 299164
[details]
Patch
Build Bot
Comment 2
2017-01-18 13:09:01 PST
Comment on
attachment 299164
[details]
Patch
Attachment 299164
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2911071
Number of test failures exceeded the failure limit.
Build Bot
Comment 3
2017-01-18 13:09:04 PST
Created
attachment 299170
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-01-18 13:11:02 PST
Comment on
attachment 299164
[details]
Patch
Attachment 299164
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2911081
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2017-01-18 13:11:04 PST
Created
attachment 299171
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2017-01-18 13:16:15 PST
Comment on
attachment 299164
[details]
Patch
Attachment 299164
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2911070
Number of test failures exceeded the failure limit.
Build Bot
Comment 7
2017-01-18 13:16:18 PST
Created
attachment 299172
[details]
Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alex Christensen
Comment 8
2017-01-18 13:30:24 PST
Created
attachment 299174
[details]
Patch
WebKit Commit Bot
Comment 9
2017-01-18 14:53:28 PST
Comment on
attachment 299174
[details]
Patch Clearing flags on attachment: 299174 Committed
r210890
: <
http://trac.webkit.org/changeset/210890
>
WebKit Commit Bot
Comment 10
2017-01-18 14:53:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug