Fix CFURLConnection build on Mac https://bugs.webkit.org/show_bug.cgi?id=167168

Patch by Alex Christensen <achristensen@webkit.org> on 2017-01-18
Reviewed by Andy Estes.

Source/WebCore:

This is old code, and it hurts to do this, but I need this working to compare with Windows
to get the ResourceHandleCFURLConnectionDelegateWithOperationQueue working so we can make
loading asynchronous in WebCore.

* page/mac/PageMac.mm:
(WebCore::Page::platformInitialize):
* platform/network/cf/AuthenticationCF.cpp:
* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::ResourceHandle::createCFURLConnection):
* platform/network/cf/SynchronousResourceHandleCFURLConnectionDelegate.cpp:
(WebCore::SynchronousResourceHandleCFURLConnectionDelegate::setupRequest):
(WebCore::SynchronousResourceHandleCFURLConnectionDelegate::canRespondToProtectionSpace):
* platform/network/cocoa/ResourceRequestCocoa.mm:
(WebCore::ResourceRequest::clearOrUpdateNSURLRequest):
Moved from iOS-specific file.  It's needed on Mac using CFURLConnection, too.
* platform/network/ios/ResourceRequestIOS.mm:
(WebCore::ResourceRequest::clearOrUpdateNSURLRequest): Deleted.

Source/WebKit2:

* NetworkProcess/Downloads/mac/DownloadMac.mm:
(WebKit::Download::resume):
(WebKit::Download::platformDidFinish):
(WebKit::Download::platformCancelNetworkLoad):
(WebKit::Download::startNetworkLoadWithHandle):
(WebKit::Download::startNetworkLoad):
(WebKit::Download::platformInvalidate):
* NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::allowsSpecificHTTPSCertificateForHost):
(WebKit::serverTrustCredential):
* Shared/Authentication/mac/AuthenticationManager.mac.mm:
(WebKit::AuthenticationManager::tryUseCertificateInfoForChallenge):
* config.h:

Canonical link: https://commits.webkit.org/184224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210890 268f45cc-cd09-0410-ab3c-d52691b4dbfc